<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.diegolovison</groupId>
  <artifactId>yewyc</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>yewyc</name>
  <url>http://maven.apache.org</url>

  <modules>
    <module>core</module>
      <module>java-http-client</module>
      <module>okhttp-http-client</module>
      <module>reactor-netty-http-client</module>
      <module>http-server</module>
  </modules>

  <properties>
      <jboss-logging.version>3.6.1.Final</jboss-logging.version>
      <tablesaw-core.version>0.44.1</tablesaw-core.version>
      <jgroups.version>5.4.4.Final</jgroups.version>
      <okhttp.version>4.12.0</okhttp.version>
      <reactor-netty.version>1.2.5</reactor-netty.version>
      <HdrHistogram.version>2.2.2</HdrHistogram.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>25</source>
          <target>25</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
